--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_GRAPHQL_URL=https://api-sa-east-1.hygraph.com/v2/clfgw3yvb0ark01t8fj0u31rg/master
+NEXT_PUBLIC_GRAPHQL_URL=//add here your graphql url
