--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.2.1",
     "styled-components": "^5.3.9",
     "typescript": "5.0.2",
     "typewriter-effect": "^2.19.0"
